--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -6,7 +6,7 @@
   refreshPeriod: 168h
 .oh-my-zsh/custom/plugins/zsh-syntax-highlighting:
   type: archive
-  url: https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz
+  url: https://github.com/zsh-users/zsh-syntax-highlighting/archive/0.8.0-alpha1-pre-redrawhook.tar.gz
   exact: true
   stripComponents: 1
   refreshPeriod: 168h
