--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -6,7 +6,7 @@
   refreshPeriod: 168h
 .oh-my-zsh/custom/plugins/zsh-syntax-highlighting:
   type: archive
-  url: https://github.com/zsh-users/zsh-syntax-highlighting/archive/0.8.0-alpha1-pre-redrawhook.tar.gz
+  url: https://github.com/zsh-users/zsh-syntax-highlighting/archive/master.tar.gz
   exact: true
   stripComponents: 1
   refreshPeriod: 168h
@@ -20,3 +20,9 @@
   url: https://github.com/zsh-users/zsh-autosuggestions/archive/v0.7.0.tar.gz
   exact: true
   stripComponents: 1
+.tmux:
+  type: git-repo
+  url: https://github.com/gpakosz/.tmux.git
+.config/nvim:
+  type: git-repo
+  url: https://github.com/nvim-lua/kickstart.nvim.git
