--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -12,14 +12,11 @@
   refreshPeriod: 168h
 .oh-my-zsh/custom/themes/powerlevel10k:
   type: archive
-  url: https://github.com/romkatv/powerlevel10k/archive/v1.16.1.tar.gz
+  url: https://github.com/romkatv/powerlevel10k/archive/master.tar.gz
   exact: true
   stripComponents: 1
 .oh-my-zsh/custom/plugins/zsh-autosuggestions:
   type: archive
-  url: https://github.com/zsh-users/zsh-autosuggestions/archive/v0.7.0.tar.gz
+  url: https://github.com/zsh-users/zsh-autosuggestions/archive/master.tar.gz
   exact: true
   stripComponents: 1
-.tmux:
-  type: git-repo
-  url: https://github.com/gpakosz/.tmux.git
